--- a/index.html
+++ b/index.html
@@ -41,11 +41,13 @@
         >
           <input
             type="text"
+            name="kontaktväg"
             class="kontaktardig"
             placeholder="mobilnummer eller mailadress..."
           />
           <input
             type="image"
+            name="submit"
             tabindex="0"
             class="raket"
             src="/Img/raket.png"
