--- a/kontakt.html
+++ b/kontakt.html
@@ -38,11 +38,13 @@
         >
           <input
             type="text"
+            name="kontaktväg"
             class="kontaktardig"
             placeholder="mobilnummer eller mailadress..."
           />
           <input
             type="image"
+            name="submit"
             tabindex="0"
             class="raket"
             src="/Img/raket.png"
