--- a/tjänster.html
+++ b/tjänster.html
@@ -44,11 +44,13 @@
         >
           <input
             type="text"
+            name="kontaktväg"
             class="kontaktardig"
             placeholder="mobilnummer eller mailadress..."
           />
           <input
             type="image"
+            name="submit"
             tabindex="0"
             class="raket"
             src="/Img/raket.png"
