Snyggade till mobil vy och layout

--- a/kontakt.html
+++ b/kontakt.html
@@ -29,7 +29,10 @@
     <div class="container">
       <div class="vänster">
         <h1 class="title">Kom i kontakt</h1>
-        <p class="bodytext">Albin Johansson 0704199790 aljo940616@gmail.com</p>
+        <p class="bodytext">
+          Skriv in ditt mobilnummer eller din mailadress här nedan så kontaktar
+          jag dig omgående.
+        </p>
         <form
           class="inputcontainer"
           name="contact"
