--- a/tjänster.html
+++ b/tjänster.html
@@ -30,11 +30,11 @@
       <div class="vänster">
         <h1 class="title">Jag vill hjälpa dig med...</h1>
         <p class="bodytext">
-          en hemsida som visar verksammheten från sin bästa sida.
+          en hemsida som visar verksamheten från sin bästa sida.
         </p>
         <p>
           En bra hemsida ska vara din bästa säljare, den arbetar dygnet runt och
-          gör exakt det du ber den om.
+          håller en jämn och hög nivå.
         </p>
         <form
           class="inputcontainer"
